tests/paczka1/small_fuzzy/83196560.err
Error in line 2: 6QzM A21 23,0
Error in line 6: 6QzM S964 52,0
Error in line 10: 6QzM A350 52,5
